[tool.poetry]
name = "image-similarity-probability"
version = "0.1.0"
description = "comparing the similarity of two images"
authors = ["nikonovone <nikonov.nikita@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.8.0"
pyvips = "^2.2.3"
lightning = "^2.4.0"
timm = "^1.0.9"
pydantic = "^2.9.2"
omegaconf = "^2.3.0"
clearml = "^1.16.4"
albumentations = "^1.4.16"
torchinfo = "^1.8.0"
scikit-learn = "^1.5.2"
rich = "^13.8.1"
torch = {version = "^2.4.1+cu121", source = "pytorch_gpu"}
torchvision = {version = "^0.19.1+cu121", source = "pytorch_gpu"}
pytorch-metric-learning = "^2.6.0"
tensorboard = "^2.18.0"

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = "^3.7.1"
ipywidgets = "^8.0.6"
ipykernel = "^6.29.5"
ipyplot = "^1.1.1"
